[tool.poetry]
name = "invoker"
version = "0.1.0"
description = ""
authors = ["Spotika <andrey.a.cherkashin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
loguru = "^0.7.2"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
